--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evalúa tu Sonrisa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container" id="app-container">
@@ -12,6 +12,6 @@
         <p>Esta herramienta te ayudará a identificar posibles signos de que podrías necesitar ortodoncia. Recuerda, no reemplaza la opinión de un profesional.</p>
         <button id="start-button">Comenzar Evaluación</button>
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
