--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="container" id="app-container">
-        <h1>Evalúa tu Sonrisa</h1>
+        <h1>Evalúa tu Sonrisa SyV</h1>
         <p>Esta herramienta te ayudará a identificar posibles signos de que podrías necesitar ortodoncia. Recuerda, no reemplaza la opinión de un profesional.</p>
         <button id="start-button">Comenzar Evaluación</button>
     </div>
     <script src="./app.js"></script>
 </body>
 </html>
+
