--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evalúa tu Sonrisa</title>
+    <title>Evalúa tu SonrisaSyV</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -15,4 +15,5 @@
     <script src="./app.js"></script>
 </body>
 </html>
+
 
