--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evalúa tu SonrisaSyV</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Evalúa tu Sonrisa</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container" id="app-container">
-        <h1>Evalúa tu Sonrisa SyV</h1>
+        <h1>Evalúa tu Sonrisa</h1>
         <p>Esta herramienta te ayudará a identificar posibles signos de que podrías necesitar ortodoncia. Recuerda, no reemplaza la opinión de un profesional.</p>
         <button id="start-button">Comenzar Evaluación</button>
     </div>
-    <script src="./app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
